--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-native-firebase/app": "^12.9.3",
     "@react-native-firebase/database": "^12.9.3",
+    "@react-native-firebase/storage": "^13.0.1",
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/native-stack": "^6.2.3",
     "react": "17.0.2",
