--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.66.0",
     "react-native-auto-height-image": "^3.2.4",
     "react-native-calendars": "^1.1268.0",
+    "react-native-date-picker": "^4.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.29.3",
     "react-native-qrcode-svg": "^6.1.1",
