--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "react-native-date-picker": "^4.1.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.29.3",
-    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
-    "recoil": "^0.5.2"
+    "react-native-webview": "9.0.1",
+    "recoil": "^0.5.2",
+    "rn-qr-generator": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
