--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-auto-height-image": "^3.2.4",
     "react-native-calendars": "^1.1268.0",
     "react-native-date-picker": "^4.1.1",
+    "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.29.3",
     "react-native-reanimated": "^2.2.4",
