카메라 추가중

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.66.0",
     "react-native-auto-height-image": "^3.2.4",
     "react-native-calendars": "^1.1268.0",
+    "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.1.1",
     "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "^1.10.3",
